# graphql-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: run_tests.yml
docs/source/: index.rst
docs/source/usage/: quickstart.rst
src/graphql_sqlalchemy/: __init__.py  args.py  graphql_types.py  helpers.py  inputs.py  names.py  objects.py  resolvers.py  schema.py  testing.py  types.py
src/graphql_sqlalchemy/dialects/pg/: inputs.py
tests/: conftest.py  test_build_schema.py  test_queries.py  test_types.py  test_utils.py
tests/test_graphql/: conftest.py  test_mutations.py  test_query_simple.py  test_query_where.py
tests/test_queries/: conftest.py  test_where.py
